...
                        .frame(width: 400)
                    }

                    if self.dateRange == .custom {
                        HStack(spacing: 20) {
                            VStack(alignment: .leading) {
                                Text("Start Date")
                                    .font(.subheadline)
                                DatePicker("", selection: self.$customStartDate, displayedComponents: .date)
                                    .labelsHidden()
                            }

                            VStack(alignment: .leading) {
                                Text("End Date")
                                    .font(.subheadline)
                                DatePicker("", selection: self.$customEndDate, displayedComponents: .date)
                                    .labelsHidden()
                            }
                        }
                    }
...
